# Robotics-Systems-Design-Project-Group2_PGD_UOM

./: README.md
mechanical/: Mechanical Design.docx
simulation/LeoRover_description/: CMakeLists.txt  package.xml
simulation/LeoRover_description/launch/: display.launch.py
simulation/LeoRover_motion/: package.xml  setup.cfg  setup.py
simulation/LeoRover_motion/LeoRover_motion/: odom_tf.py  odom_tf_cmdvel.py
simulation/urdf/: leoRover.urdf
software/ObjectDetection/object_detect_opencv/: setup.py
software/object_detection_opencv/object_detection_opencv/: hsv_debug.py  image_sub.py
